--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
 	"devDependencies": {
 		"@types/bcryptjs": "^2.4.6",
 		"@types/cookie-parser": "^1.4.7",
+		"@types/dotenv": "^6.1.1",
 		"@types/express": "^4.17.21",
-		"@types/jsonwebtoken": "^9.0.6",
+		"@types/jsonwebtoken": "^9.0.9",
+		"@types/node": "^22.13.10",
+		"@types/socket.io": "^3.0.1",
 		"nodemon": "^3.1.0",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.4.5"
