--- a/package.json
+++ b/package.json
@@ -1,37 +1,37 @@
 {
-	"name": "pern-chat-app",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"dev": "nodemon --watch backend/src --exec ts-node backend/src/index.ts",
-		"build": "tsc && npm install && prisma generate --schema=./backend/prisma/schema.prisma && npm install --prefix frontend && npm run build --prefix frontend",
-		"start": "node backend/dist/src/index.js"
-	},
-	"type": "module",
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"devDependencies": {
-		"@types/bcryptjs": "^2.4.6",
-		"@types/cookie-parser": "^1.4.8",
-		"@types/dotenv": "^6.1.1",
-		"@types/express": "^4.17.21",
-		"@types/jsonwebtoken": "^9.0.9",
-		"@types/node": "^22.13.10",
-		"@types/socket.io": "^3.0.1",
-		"nodemon": "^3.1.9",
-		"prisma": "^6.5.0",
-		"ts-node": "^10.9.2",
-		"typescript": "^5.8.2"
-	},
-	"dependencies": {
-		"@prisma/client": "^6.5.0",
-		"bcryptjs": "^2.4.3",
-		"cookie-parser": "^1.4.7",
-		"dotenv": "^16.4.7",
-		"express": "^4.21.2",
-		"jsonwebtoken": "^9.0.2",
-		"socket.io": "^4.8.1"
-	}
+    "name": "pern-chat-app",
+    "version": "1.0.0",
+    "description": "",
+    "main": "backend/dist/src/index.js",
+    "scripts": {
+        "dev": "nodemon --watch backend/src --exec ts-node backend/src/index.ts",
+        "build": "tsc",
+        "start": "node backend/dist/index.js",
+        "postinstall": "prisma generate --schema=./backend/prisma/schema.prisma"
+    },
+    "type": "module",
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/bcryptjs": "^2.4.6",
+        "@types/cookie-parser": "^1.4.8",
+        "@types/express": "^4.17.21",
+        "@types/jsonwebtoken": "^9.0.9",
+        "@types/node": "^20.17.24",
+        "@types/socket.io": "^3.0.1",
+        "nodemon": "^3.1.0",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.4.5"
+    },
+    "dependencies": {
+        "@prisma/client": "^6.5.0",
+        "bcryptjs": "^2.4.3",
+        "cookie-parser": "^1.4.6",
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "jsonwebtoken": "^9.0.2",
+        "prisma": "^6.5.0",
+        "socket.io": "^4.7.5"
+    }
 }
