--- a/package.json
+++ b/package.json
@@ -2,15 +2,14 @@
     "name": "pern-chat-app",
     "version": "1.0.0",
     "description": "",
-    "main": "backend/dist/src/index.js",
+    "main": "backend/dist/index.js",
     "scripts": {
-    "dev": "nodemon --watch backend/src --exec ts-node backend/src/index.ts",
-    "build": "tsc",
-    "start": "npm run prestart && node backend/dist/index.js",
-    "prestart": "prisma generate --schema=./backend/prisma/schema.prisma && prisma migrate deploy --schema=./backend/prisma/schema.prisma",
-    "postinstall": "prisma generate --schema=./backend/prisma/schema.prisma"
-},
-
+        "dev": "nodemon --watch backend/src --exec ts-node-esm backend/src/index.ts",
+        "build": "tsc",
+        "start": "npm run prestart && node backend/dist/index.js",
+        "prestart": "prisma generate --schema=./backend/prisma/schema.prisma && prisma migrate deploy --schema=./backend/prisma/schema.prisma",
+        "postinstall": "prisma generate --schema=./backend/prisma/schema.prisma"
+    },
     "type": "module",
     "keywords": [],
     "author": "",
@@ -30,6 +29,7 @@
         "@prisma/client": "^6.5.0",
         "bcryptjs": "^2.4.3",
         "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "jsonwebtoken": "^9.0.2",
